--- a/durcheinander/index.html
+++ b/durcheinander/index.html
@@ -11,14 +11,15 @@
     <script src="js/script.js"></script>
   </head>
   <body>
-    <svg
+    <div id="user" top="0px" left="0px"></div>
+    <!-- <svg
       id="user"
       data-name="Layer 1"
       xmlns="http://www.w3.org/2000/svg"
       viewBox="0 0 311 705"
     >
       <rect class="cls-1" y="165" width="371" height="533" />
-    </svg>
+    </svg> -->
     <div id="grid-container"></div>
   </body>
 </html>
